--- a/WebApiSegura/DWProyecto/bin/DWProyecto.dll.config
+++ b/WebApiSegura/DWProyecto/bin/DWProyecto.dll.config
@@ -73,8 +73,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ProyectoEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WHITE-DESKTOP\SQLEXPRESS;initial catalog=Proyecto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="ProyectoEntities" connectionString="metadata=res://*/Models.ModeloProyecto.csdl|res://*/Models.ModeloProyecto.ssdl|res://*/Models.ModeloProyecto.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WHITE-DESKTOP\SQLEXPRESS;initial catalog=Proyecto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
