--- a/Clase_10_11/AppReservasSW/AppReservasSW/AppReservasSW.csproj
+++ b/Clase_10_11/AppReservasSW/AppReservasSW/AppReservasSW.csproj
@@ -208,8 +208,11 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
     <Content Include="ViewSwitcher.ascx" />
+    <Content Include="Views\Carro.aspx" />
     <Content Include="Views\Hotel.aspx" />
+    <Content Include="Views\Lote.aspx" />
     <Content Include="Views\Modelo.aspx" />
+    <Content Include="Views\Proveedor.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
     <Content Include="Site.Mobile.Master" />
@@ -235,7 +238,9 @@
     </Compile>
     <Compile Include="Controllers\CarroManager.cs" />
     <Compile Include="Controllers\HotelManager.cs" />
+    <Compile Include="Controllers\LoteManager.cs" />
     <Compile Include="Controllers\ModeloManager.cs" />
+    <Compile Include="Controllers\ProveedorManager.cs" />
     <Compile Include="Controllers\ReservasController.cs" />
     <Compile Include="Controllers\UsuarioManager.cs" />
     <Compile Include="Default.aspx.cs">
@@ -266,7 +271,9 @@
     <Compile Include="Models\Habitacion.cs" />
     <Compile Include="Models\Hotel.cs" />
     <Compile Include="Models\LoginRequest.cs" />
+    <Compile Include="Models\Lote.cs" />
     <Compile Include="Models\Modelo.cs" />
+    <Compile Include="Models\Proveedor.cs" />
     <Compile Include="Models\Reserva.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -299,6 +306,13 @@
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
     </Compile>
+    <Compile Include="Views\Carro.aspx.cs">
+      <DependentUpon>Carro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Carro.aspx.designer.cs">
+      <DependentUpon>Carro.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Hotel.aspx.cs">
       <DependentUpon>Hotel.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -306,12 +320,26 @@
     <Compile Include="Views\Hotel.aspx.designer.cs">
       <DependentUpon>Hotel.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Views\Lote.aspx.cs">
+      <DependentUpon>Lote.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Lote.aspx.designer.cs">
+      <DependentUpon>Lote.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Modelo.aspx.cs">
       <DependentUpon>Modelo.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Views\Modelo.aspx.designer.cs">
       <DependentUpon>Modelo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Proveedor.aspx.cs">
+      <DependentUpon>Proveedor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Proveedor.aspx.designer.cs">
+      <DependentUpon>Proveedor.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
