Primera parte último avance
Modelo, Manager controller

--- a/Clase_10_11/AppReservasSW/AppReservasSW/AppReservasSW.csproj
+++ b/Clase_10_11/AppReservasSW/AppReservasSW/AppReservasSW.csproj
@@ -209,10 +209,12 @@
     <Content Include="Site.Master" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Views\Carro.aspx" />
+    <Content Include="Views\Empleado.aspx" />
     <Content Include="Views\Hotel.aspx" />
     <Content Include="Views\Lote.aspx" />
     <Content Include="Views\Modelo.aspx" />
     <Content Include="Views\Proveedor.aspx" />
+    <Content Include="Views\Puesto.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
     <Content Include="Site.Mobile.Master" />
@@ -238,6 +240,8 @@
     </Compile>
     <Compile Include="Controllers\CarroManager.cs" />
     <Compile Include="Controllers\HotelManager.cs" />
+    <Compile Include="Controllers\EmpleadoManager.cs" />
+    <Compile Include="Controllers\PuestoManager.cs" />
     <Compile Include="Controllers\LoteManager.cs" />
     <Compile Include="Controllers\ModeloManager.cs" />
     <Compile Include="Controllers\ProveedorManager.cs" />
@@ -268,12 +272,14 @@
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\Carro.cs" />
+    <Compile Include="Models\Empleado.cs" />
     <Compile Include="Models\Habitacion.cs" />
     <Compile Include="Models\Hotel.cs" />
     <Compile Include="Models\LoginRequest.cs" />
     <Compile Include="Models\Lote.cs" />
     <Compile Include="Models\Modelo.cs" />
     <Compile Include="Models\Proveedor.cs" />
+    <Compile Include="Models\Puesto.cs" />
     <Compile Include="Models\Reserva.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -313,6 +319,13 @@
     <Compile Include="Views\Carro.aspx.designer.cs">
       <DependentUpon>Carro.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Views\Empleado.aspx.cs">
+      <DependentUpon>Empleado.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Empleado.aspx.designer.cs">
+      <DependentUpon>Empleado.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Hotel.aspx.cs">
       <DependentUpon>Hotel.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -340,6 +353,13 @@
     </Compile>
     <Compile Include="Views\Proveedor.aspx.designer.cs">
       <DependentUpon>Proveedor.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Puesto.aspx.cs">
+      <DependentUpon>Puesto.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Puesto.aspx.designer.cs">
+      <DependentUpon>Puesto.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
