--- a/WebApiSegura/WebApiSegura/Web.config
+++ b/WebApiSegura/WebApiSegura/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="RESERVAS" connectionString="Data Source=DESKTOP-BSIAMHA\INSTANCEDEANSQL;Initial catalog=RESERVAS_DW;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+		<add name="RESERVAS" connectionString="Data Source=DESKTOP-BSIAMHA\INSTANCEDEANSQL;Initial catalog=RESERVAS_SW;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
